[gd_scene load_steps=5 format=3 uid="uid://bcupwc5bg5oxk"]

[ext_resource type="Script" path="res://script/ui.gd" id="1_7syya"]
[ext_resource type="FontFile" uid="uid://s5utywowsoqp" path="res://assets/fonts/joystix monospace.otf" id="1_qfd1h"]
[ext_resource type="PackedScene" uid="uid://duhoj846mnmbw" path="res://scene/fade.tscn" id="3_nvp4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jl40q"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7syya")

[node name="GameReady" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 143.0
offset_bottom = -416.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="ReadyLabel" type="Label" parent="GameReady"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 70
text = "yo get ready!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 0.988
offset_left = 256.0
offset_top = 64.0
offset_right = -247.936
offset_bottom = 7.776

[node name="HighScoreLabel" type="Label" parent="GameOver"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 60
text = "BEST:"
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOver"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 60
text = "SCORED:
"
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 70
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="GameOver"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jl40q")

[node name="Restart" type="Button" parent="GameOver/Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 15.0
offset_right = 493.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_focus_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 60
text = "RESTART"

[node name="Quit" type="Button" parent="GameOver/Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 103.0
offset_right = 493.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.929412, 0.133333, 0.141176, 1)
theme_override_colors/font_focus_color = Color(0.929412, 0.133333, 0.141176, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 60
text = "QUIT"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="PointsLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.929412, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_qfd1h")
theme_override_font_sizes/font_size = 40
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fade" parent="." instance=ExtResource("3_nvp4r")]

[connection signal="pressed" from="GameOver/Panel/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOver/Panel/Quit" to="." method="_on_quit_pressed"]
